Better PortfolioImpl equality
Portfolios are equal if their monetary portions are equal.