@@ -16,8 +16,6 @@
 
 package com.github.robozonky.app.tenant;
 
-import java.time.Clock;
-import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.Collections;
 import java.util.EnumMap;
@@ -27,7 +25,6 @@ import com.github.robozonky.api.Money;
 import com.github.robozonky.api.Ratio;
 import com.github.robozonky.api.remote.enums.Rating;
 import com.github.robozonky.api.strategies.PortfolioOverview;
-import com.github.robozonky.internal.Defaults;
 import com.github.robozonky.test.AbstractRoboZonkyTest;
 import org.junit.jupiter.api.Test;
 
@@ -38,7 +35,6 @@ class PortfolioOverviewImplTest extends AbstractRoboZonkyTest {
 
     @Test
     void equality() {
-        setClock(Clock.fixed(Instant.EPOCH, Defaults.ZONE_ID));
         PortfolioOverview po = new PortfolioOverviewImpl(Collections.emptyMap(), Ratio.ZERO);
         assertThat(po)
                 .isEqualTo(po)
@@ -48,7 +44,7 @@ class PortfolioOverviewImplTest extends AbstractRoboZonkyTest {
         assertThat(po).isEqualTo(po2);
         assertThat(po2).isEqualTo(po);
         resetClock();
-        PortfolioOverview po3 = new PortfolioOverviewImpl(Collections.emptyMap(), Ratio.ZERO);
+        PortfolioOverview po3 = new PortfolioOverviewImpl(Map.of(Rating.A, Money.from(100)), Ratio.ZERO);
         assertThat(po3)
                 .isNotEqualTo(po)
                 .isNotEqualTo(po2);
